--- a/HealJaiProject/package.json
+++ b/HealJaiProject/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
     "expo-font": "^12.0.9",
