--- a/HealJaiProject/package.json
+++ b/HealJaiProject/package.json
@@ -12,13 +12,14 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
     "expo-font": "^12.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "^3.10.1",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0"
