--- a/HealJaiProject/package.json
+++ b/HealJaiProject/package.json
@@ -14,11 +14,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.4",
-    "expo": "~51.0.28",
+    "expo": "^51.0.28",
     "expo-font": "^12.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "^3.10.1",
     "react-native-uuid": "^2.0.2",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "~0.67.6",
     "typescript": "^5.3.3"
   },
   "private": true
